updated DB name and port changes

--- a/server-side/.env
+++ b/server-side/.env
@@ -1,5 +1,5 @@
-MONGO_DB_URL = mongodb://localhost/job_portal1
-PORT = 3001
+MONGO_DB_URL = mongodb://localhost/job_portal
+PORT = 3000
 SECRET_KEY = secrettokenkey
 retry = 3
 NODE_ENV = development
